Fixed overflow for button

--- a/src/FilterConditionSelector/FilterConditionSelector.scss
+++ b/src/FilterConditionSelector/FilterConditionSelector.scss
@@ -94,6 +94,10 @@
 		box-sizing: border-box;
 		cursor: pointer;
 
+		text-overflow: ellipsis;
+		overflow: hidden;
+		white-space: nowrap;
+
 		&:hover,
 		&:focus {
 			color: #fff;
